<resources>
    <string name="gp_remark">备注</string>
    <string name="cannot_see_copyvalue">看不清</string>
    <string name="app_bdyw">变电运维智能移动作业平台</string>
    <string name="app_tips">五通一措版</string>
    <string name="weather">当前天气</string>
    <string name="inspection_task_remind_str">巡检任务提醒</string>
    <string name="work_temperature_jcstr">温度:</string>
    <string name="work_humidity_jcstr">湿度:</string>
    <string name="work_weather_jcstr">天气：</string>
    <string name="work_start_time_str">检测开始时间：</string>
    <string name="work_end_time_str">检测结束时间：</string>
    <string name="work_persons_str">检测人员：</string>
    <string name="work_check_type_str">检测类别：</string>
    <string name="work_result_str">检测结果</string>
    <string name="work_finish_status_str">检测完成情况：未完成</string>
    <string name="work_finish_check_str">检查情况：</string>
    <string name="work_continue_str">继续检测</string>
    <string name="work_status_format_str">巡检完成情况：%1$s</string>
    <string name="battery_test_type_str">测试分类：</string>
    <string name="confirm_str">确\t认</string>
    <string name="dialog_cancel_text_str">取\t消</string>
    <string name="please_select_inspection_date_str">请选择巡检时间</string>
    <string name="please_select_after_today_date_str">请选择今天及以后的时间</string>
    <string name="please_select_power_station_str">请选择变电站</string>
    <string name="please_select_ylcs_str">请选择检测类别</string>
    <string name="defect_reason_str">缺陷原因</string>
    <string name="add_inspection_task_str">追加巡检任务</string>
    <string name="please_input_value_str">请输入</string>
    <string name="report_generating_str">报告生成中\u2026</string>
    <string name="finish_str">完\t成</string>
    <string name="back_str">返\t回</string>
    <string name="clear_all_mark_str">清除标记</string>
    <string name="add_mark_str">添加标记</string>
    <string name="task_function_title_str">任务选项</string>
    <string name="see_inspection_details_str">查看详情</string>
    <string name="install_now_str_pms">新版本已下载是否更新</string>
    <string name="dialog_tips_finish_str">抄录完成情况:%1$s</string>
    <string name="report_title_format_str">%1$s报告</string>
    <string name="humidity_unit_str">%RH</string>
    <string name="temperature_unit_str">°C</string>
    <string name="pre">上一个</string>
    <string name="next">下一个</string>
    <string name="login_str">登\t\t录</string>
    <string name="login_the_same_account">您已登录该帐号，请勿重复登录！</string>
    <string name="login_user_not_activte">您的帐号还未激活，请到管理后台登录激活</string>
    <string name="login_failed_password_str">密码输入错误，请重新输入</string>
    <string name="login_failed_str">登录失败,请检查用户名和密码!</string>
    <string name="sys_copyrights_format_str">Copyrights\t四川嘉能佳电力集团有限责任公司网创科技分公司 \tV%1$s</string>
    <string name="et_user_hint_str">请输入用户名</string>
    <string name="et_password_hint_str">请输入密码</string>
    <string name="btn_add_user_str">添\t\t加</string>
    <string name="inspectorattendant_text_str">巡视人员</string>
    <string name="dialog_sure_str">确\t定</string>
    <string name="dialog_save_str">保\t存</string>
    <string name="dialog_cancle_str">取\t消</string>
    <string name="dialog_tips_str">提\t示</string>
    <string name="dialog_tips_content_str">本次巡检还未完成，是否要结束巡检？</string>
    <string name="dialog_tips_delete_pic_content">是否删除图片？</string>
    <string name="recording_audio_str">正在录音,点击停止录音</string>
    <string name="data_history_record_format_str">%1$s历史记录</string>
    <string name="yes_str">是</string>
    <string name="no_str">否</string>
    <string name="data_sync_str">数据同步</string>
    <string name="cancel_str">取\t消</string>
    <string name="save_str">保\t存</string>
    <string name="complete_test_text">完成测试</string>
    <string name="produce_hwcw_record">生成测温记录</string>
    <string name="login_no_user">没有登录人员,请添加</string>
    <string name="chadong_baohu_jilu">差动保护差流记录</string>
    <string name="have_not_save_data">当前编辑区还有未保存数据，是否要清除?</string>
    <string name="delete_data">是否要删除本条数据</string>
    <string name="jiaozhiliu_fenjie_kaiguan">交直流变压器分接开关调整记录</string>
    <string name="indoor_tempreture_recoder">室内温湿度记录</string>
    <string name="sbxs">设备巡视</string>
    <string name="sbjc">设备检测</string>
    <string name="dqsy">轮换、试验</string>
    <string name="dqwh">日常维护</string>
    <string name="ywyth">运维一体化</string>
    <string name="dzhczp">电子化操作票</string>
    <string name="zxxs">专项巡视</string>
    <string name="sbys">设备验收</string>
    <string name="jyhys">精益化验收</string>
    <string name="jyhpj">精益化评价</string>
    <string name="sjtb">数据同步</string>
    <string name="gzp">工作票</string>
    <string name="tjwt">图解五通</string>
    <string name="new_yanshou_card">新建验收标准卡</string>
    <string name="xudianchi_wendu">蓄电池室温度（℃）</string>
    <string name="test_type">测试分类</string>
    <string name="fact_test_voltage">实测全电池浮充电压（V）</string>
    <string name="system_battery_voltage">直流系统监测全电池浮充电压（V）</string>
    <string name="load_battery_electricity">负荷电流（A）</string>
    <string name="fuchong_electricty">浮充电流（A）</string>
    <string name="zheng_muxian_voltage">正母线对地电压值（V）</string>
    <string name="fu_muxian_voltage">负母线对地电压值（V）</string>
    <string name="bhpzmwd">保护屏正面温度（℃）</string>
    <string name="bhpbmwd">保护屏背面温度（℃）</string>
    <string name="fzbwwd">发热部位温度（℃）</string>
    <string name="title_activity_tjwt">TJWTActivity</string>
    <string name="menu_unify">运维一体化</string>
    <string name="menu_operate">倒闸操作</string>
    <string name="menu_record">首页</string>
    <string name="menu_maintenance">设备维护</string>
    <string name="menu_tour">设备巡视</string>
    <string name="add_new_task">新建任务</string>
    <string name="menu_search">仪器搜索</string>
    <string name="xunshi_app_name">变电运维智能移动作业终端</string>
    <string name="xs_yw_dialog_tips">请输入遗留问题</string>
    <string name="xs_yw_test_report">试验报告</string>
    <string name="xs_yw_complete_work">完成工作</string>
    <string name="xs_yw_complete">完\t成</string>
    <string name="xs_special_inspection_str">专项\n巡检</string>
    <string name="xs_inspection_train_str">巡检培训</string>
    <string name="xs_new_equipment_inspection_str">新设备\n投运巡检</string>
    <string name="xs_acceptance_equipment_str">设备\n验收</string>
    <string name="xs_inspection_task_remind_str">巡检任务提醒</string>
    <string name="xs_inspection_ready_str">巡检前准备</string>
    <string name="xs_exist_defect_str">现存缺陷</string>
    <string name="xs_inspection_standard_str">巡视标准</string>
    <string name="xs_power_station_str">变电站</string>
    <string name="xs_battery_infor_str">蓄电池组参数</string>
    <string name="xs_add_new_defect_str">新增缺陷</string>
    <string name="xs_add_new_defect_define_str">新增缺陷定义</string>
    <string name="xs_revoke_str">撤\t销</string>
    <string name="xs_test_step_str">试验步骤</string>
    <string name="xs_comprehensive_inspection_no_symbol_str">全面巡检</string>
    <string name="xs_focus_attention_str">重点关注</string>
    <string name="xs_picker_tag">无</string>
    <string name="xs_record_defect_str">记录缺陷</string>
    <string name="xs_reference_photo_str">参考图片</string>
    <string name="xs_reference_standard_str">参考标准</string>
    <string name="xs_deal_method_str">处理方法</string>
    <string name="xs_yw_take_picture">拍照</string>
    <string name="xs_yw_take_voice">录音</string>
    <string name="xs_yw_take_vedio">录像</string>
    <string name="xs_change_pic_str">更换照片</string>
    <string name="xs_do_list_str">待办事项：共0项\n已办事项：共0项</string>
    <string name="xs_inspection_start_time_str">巡检开始时间：</string>
    <string name="xs_work_start_time_str">工作开始时间：</string>
    <string name="xs_inspection_persons_str">巡检人员：</string>
    <string name="xs_work_persons_str">工作人员：</string>
    <string name="xs_work_department_str">工作单位：</string>
    <string name="xs_work_group_str">工作班组：</string>
    <string name="xs_inspection_end_time_str">巡检结束时间：</string>
    <string name="xs_work_end_time_str">工作结束时间：</string>
    <string name="xs_inspection_temperature_str">巡检时温度：</string>
    <string name="xs_inspection_humidity_str">巡检时湿度：</string>
    <string name="xs_inspection_weather_str">巡检时天气：</string>
    <string name="xs_inspection_type_name">试验名称：</string>
    <string name="xs_battery_name2_str">蓄电池组名称</string>
    <string name="xs_battery_name_str">蓄电池组名称：</string>
    <string name="xs_battery_test_type_str">测试分类：</string>
    <string name="xs_inspection_result_str">巡检结果</string>
    <string name="xs_inspection_finish_status_str">巡检完成情况：未完成</string>
    <string name="xs_infrared_count_format_str">测温点数量：%1$s个</string>
    <string name="xs_discover_defect_count_format_str">发现的缺陷数量：%1$s个</string>
    <string name="xs_protect_clamp_count_format_str">保护压板核对数量：%1$s个</string>
    <string name="xs_constant_value_format_str">定值核对数量：%1$s个</string>
    <string name="xs_general_defect_str">一般缺陷</string>
    <string name="xs_work_finish_check_str">检查情况：</string>
    <string name="xs_work_finish_status_str">检测完成情况：未完成</string>
    <string name="xs_work_continue_str">继续检测</string>
    <string name="xs_work_result_str">检测结果</string>
    <string name="xs_serious_defect_str">严重缺陷</string>
    <string name="xs_crisis_defect_str">危急缺陷</string>
    <string name="xs_general_str">一般</string>
    <string name="xs_work_check_type_str">检测类别：</string>
    <string name="xs_serious_str">严重</string>
    <string name="xs_crisis_str">危急</string>
    <string name="xs_all_defect_str">巡检发现的缺陷</string>
    <string name="xs_remain_prolems_str">遗留问题</string>
    <string name="xs_new_defect_count_str">发现缺陷</string>
    <string name="xs_clear_count_str">验收缺陷</string>
    <string name="xs_track_count_str">跟踪缺陷</string>
    <string name="xs_copy_count_str">抄录数据</string>
    <string name="xs_all_defect_powerstation_str">本变电站目前现存</string>
    <string name="xs_new_product_inspection_times_str">设备新投巡检次数</string>
    <string name="xs_inspection_picture_str">巡检过程图片</string>
    <string name="xs_playback_str">巡检轨迹回放</string>
    <string name="xs_xunjian_line">巡检路线</string>
    <string name="xs_defect_control_str">缺陷管控</string>
    <string name="xs_current_device_exist_defect_str">当前设备存在缺陷</string>
    <string name="xs_add_defect_str">增加缺陷</string>
    <string name="xs_test_temperature_record_str">测温记录</string>
    <string name="xs_find_question_str">发现问题</string>
    <string name="xs_eliminate_defect_str">消除缺陷</string>
    <string name="xs_confirm_str">确\t认</string>
    <string name="xs_add_new_task">新建任务</string>
    <string name="xs_finish_temperature_str">完成测温</string>
    <string name="xs_add_str">新\t增</string>
    <string name="xs_report_to_leader_str">上\t报</string>
    <string name="xs_dialog_cancel_text_str">取\t消</string>
    <string name="xs_finish_check_str">完成核对</string>
    <string name="xs_take_picture_str">拍照</string>
    <string name="xs_please_select_device_part_str">请选择设备部件</string>
    <string name="xs_please_select_device">请选择缺陷设备</string>
    <string name="xs_please_select_spacing_str">请选择间隔</string>
    <string name="xs_please_select_device_type_str">请选择设备类型</string>
    <string name="xs_please_input_device_name_str">请输入设备名称</string>
    <string name="xs_please_select_inspection_date_str">请选择巡检时间</string>
    <string name="xs_please_select_after_today_date_str">请选择今天及以后的时间</string>
    <string name="xs_please_select_power_station_str">请选择变电站</string>
    <string name="xs_please_select_inspection_type_str">请选择巡检类型</string>
    <string name="xs_please_select_defect_reason_str">请选择缺陷原因</string>
    <string name="xs_please_input_defect_content_str">请输入缺陷内容</string>
    <string name="xs_next_set_new_product_inspection_date_str">下一步将选择新投设备并设定巡检次数</string>
    <string name="xs_track_history_str">缺陷历史</string>
    <string name="xs_track_defect_str">跟踪缺陷</string>
    <string name="xs_defect_eliminate_date_str">请选择缺陷消除日期</string>
    <string name="xs_eliminate_photo_str">请拍摄消缺拍照</string>
    <string name="xs_dialog_save_str">保\t存</string>
    <string name="xs_cancel_str">取\t消</string>
    <string name="xs_gp_delete_this_person">删除此人</string>
    <string name="xs_gp_resign">重新签名</string>
    <string name="xs_tips_str">提示</string>
</resources>