<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xs_dialog_green_title_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xs_tab_strip_minheight_px"
        android:gravity="center"
        android:text="@string/xs_tips_str"
        android:textColor="@android:color/white"
        android:textSize="@dimen/xs_global_text_size_px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/xs_global_padding_left_right_px" >

        <TextView
            android:id="@+id/tv_spacing_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="@dimen/xs_global_text_line_spacing_px"
            android:paddingBottom="@dimen/xs_global_padding_top_bottom_px"
            android:textColor="@color/xs_deep_grey"
            android:textSize="@dimen/xs_global_text_size_px" />

        <TextView
            android:id="@+id/tv_gps_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="@dimen/xs_global_text_line_spacing_px"
            android:paddingBottom="@dimen/xs_global_padding_top_bottom_px"
            android:textColor="@color/xs_deep_grey"
            android:textSize="@dimen/xs_global_text_size_px" />

        <TextView
            android:id="@+id/tv_location_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="@dimen/xs_global_text_line_spacing_px"
            android:paddingBottom="@dimen/xs_global_padding_top_bottom_px"
            android:textColor="@color/xs_deep_grey"
            android:textSize="@dimen/xs_global_text_size_px" />

        <TextView
            android:id="@+id/tv_satellite_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textColor="@color/xs_deep_grey"
            android:textSize="@dimen/xs_global_text_size_px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/xs_line_eight_width_px"
        android:background="@color/xs_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xs_global_padding_top_bottom_px"
        android:layout_marginTop="@dimen/xs_global_padding_top_bottom_px"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/xs_global_padding_left_right_px"
            android:layout_marginRight="@dimen/xs_global_padding_left_right_px"
            android:layout_weight="1"
            android:background="@drawable/xs_red_button_background_selector"
            android:gravity="center"
            android:minHeight="@dimen/xs_button_minheight"
            android:text="@string/xs_cancel_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/xs_global_text_size_px" />

        <Button
            android:id="@+id/btn_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/xs_global_padding_left_right_px"
            android:layout_marginRight="@dimen/xs_global_padding_left_right_px"
            android:layout_weight="1"
            android:background="@drawable/xs_green_button_background_selector"
            android:gravity="center"
            android:minHeight="@dimen/xs_button_minheight"
            android:text="@string/xs_dialog_save_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/xs_global_text_size_px" />
    </LinearLayout>

</LinearLayout></layout>